优化：ScheduleService 批量插入 + 真实站名种子数据 + Gateway 端口修复
- ScheduleServiceImpl: 一次性加载stopover分组，每日期批量INSERT，去事务防回滚
- TrainStopoverMapper: 新增 insertBatch 批量插入方法
- Gateway: ticket路由端口修正为8092，兼容性检查关闭
- real_seed.sql: 940趟车、169个真实地级市车站的种子数据

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>